--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ coverage==7.5.3
 mypy==1.10.0
 types-requests==2.32.0.20240622
 djlint==1.34.1
+numpy==1.26.4
+pandas==2.2.2
+# empyrical 老版本在 Py3.13 元数据生成存在问题，优先使用兼容分支
+empyrical-reloaded==0.5.10
