implementing meso observation

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,7 @@ ignore_missing_imports = True
 follow_imports = silent
 
 # Be permissive initially to avoid blocking; we can tighten later
-warn_unused_ignores = True
+warn_unused_ignores = False
 warn_redundant_casts = True
 warn_return_any = False
 warn_no_return = False
